# defm-simple-complete-fixed

./: .gitignore  COMPLETION_REPORT.md  COMPLETION_REPORT_FINAL.md  DELIVERY_SUMMARY.md  DEPLOYMENT_GUIDE.md  EXE_BUILD_GUIDE.md  FIXES_APPLIED.md  PROJECT_DOCUMENTATION.md  README.md  README_COMPLETE.md  README_FINAL.md  USER_GUIDE.md  VERIFICATION_CHECKLIST.md  build-apk.bat  build-apk.sh  build_windows_exe.bat  defm.db  deploy-web.bat  deploy-web.sh  docker-compose.yml  run_defm_desktop.bat  start.bat  start.sh  toren.txt
DEFM_Backend/: .evn  .gitignore  Dockerfile  LICENSE  README.DEFM_BACKEND_FIXES.md  README.md  alembic.ini  build-exe.bat  desktop_entry.py  desktop_main.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_app.py  setup.bat  setup.sh  setup_database.bat  setup_database.sh
DEFM_Backend/alembic/: env.py
DEFM_Backend/alembic/versions/: 001_initial.py
DEFM_Backend/app/: __init__.py  audit_service.py  recovery.py
DEFM_Backend/app/api/: __init__.py  router.py
DEFM_Backend/app/api/dependencies/: __init__.py  auth.py  roles.py
DEFM_Backend/app/api/endpoints/: __init__.py  acquisition.py  admin.py  (+11 more)
DEFM_Backend/app/core/: config.py  database.py  lifespan.py  security.py
DEFM_Backend/app/models/: __init__.py  audit.py  case.py  chain_of_custody.py  evidence.py  models.py  refresh_token.py  user.py
DEFM_Backend/app/schemas/: __init__.py  schemas.py
DEFM_Backend/app/services/: __init__.py  audit_service.py  initial_data.py  report_service.py
DEFM_Backend/app/utils/: __init__.py  case_utils.py  common_utils.py  file_utils.py
(+46 files in other folders)
