[tool.poetry]
name = "defm-backend"
version = "1.0.0"
description = "Digital Evidence Framework Management System - Backend API"
authors = ["DEFM Team"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
pillow = "^10.1.0"
cryptography = "^41.0.8"
bcrypt = "^4.1.2"
pydantic = "^2.5.0"
email-validator = "^2.1.0"
jinja2 = "^3.1.2"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
reportlab = "^4.0.7"
qrcode = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
